--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -85,6 +85,7 @@
     <script type="text/coffeescript" src="view/oneway_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/partial_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/route_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="view/select_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/unbinding_test.coffee"></script>
