Port ActiveSupport::Inflector for better pluralization.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -69,6 +69,7 @@
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/inflector_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/interpolation_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/mixin_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/polymorphic_object_access_test.coffee"></script>
