--- a/test/batman/test.html
+++ b/test/batman/test.html
@@ -46,10 +46,10 @@
     <script type="text/coffeescript" src="model/record_lifecycle_test.coffee"></script>
     <script type="text/coffeescript" src="model/state_transitions_test.coffee"></script>
     <script type="text/coffeescript" src="model/validations_test.coffee"></script>
-    <!--<script type="text/coffeescript" src="model_paginator_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="navigator/hashbang_navigator_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="navigator/navigator_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="navigator/push_state_navigator_test.coffee"></script>-->
+    <script type="text/coffeescript" src="model_paginator_test.coffee"></script>
+    <script type="text/coffeescript" src="navigator/hashbang_navigator_test.coffee"></script>
+    <script type="text/coffeescript" src="navigator/navigator_test.coffee"></script>
+    <script type="text/coffeescript" src="navigator/push_state_navigator_test.coffee"></script>
     <!--<script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>-->
     <!--<script type="text/coffeescript" src="object/integration_test.coffee"></script>-->
     <!--<script type="text/coffeescript" src="object/subclass_test.coffee"></script>-->
