--- a/test/batman/test.html
+++ b/test/batman/test.html
@@ -50,14 +50,14 @@
     <script type="text/coffeescript" src="navigator/hashbang_navigator_test.coffee"></script>
     <script type="text/coffeescript" src="navigator/navigator_test.coffee"></script>
     <script type="text/coffeescript" src="navigator/push_state_navigator_test.coffee"></script>
-    <!--<script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="object/integration_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="object/subclass_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="observable/class_and_instance_observable_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="observable/observable_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="paginator_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="params_replacer_test.coffee"></script>-->
-    <!--<script type="text/coffeescript" src="property/keypath_test.coffee"></script>-->
+    <script type="text/coffeescript" src="object/class_dsl_test.coffee"></script>
+    <script type="text/coffeescript" src="object/integration_test.coffee"></script>
+    <script type="text/coffeescript" src="object/subclass_test.coffee"></script>
+    <script type="text/coffeescript" src="observable/class_and_instance_observable_test.coffee"></script>
+    <script type="text/coffeescript" src="observable/observable_test.coffee"></script>
+    <script type="text/coffeescript" src="paginator_test.coffee"></script>
+    <script type="text/coffeescript" src="params_replacer_test.coffee"></script>
+    <script type="text/coffeescript" src="property/keypath_test.coffee"></script>
     <!--<script type="text/coffeescript" src="property/property_test.coffee"></script>-->
     <!--<script type="text/coffeescript" src="request_test.coffee"></script>-->
     <!--<script type="text/coffeescript" src="set/set_index_test.coffee"></script>-->
