Fix link to Classifieds example.

--- a/examples.html
+++ b/examples.html
@@ -22,7 +22,7 @@ layout: default
     <li class="feature-image"><a href="https://github.com/Shopify/batman-classifieds"><img src="images/classifieds_small.png" width="268" height="167"></a></li>
     <li class="feature-description">
       <h4>Batman Classifieds</h4>
-      <p>A complete open-source Batman app working on top of Rails. <a href="http://batman-classifieds.herokuapp.com">Live example</a> and <a href="https://github.com/Shopify/batman-classifieds">source code</a>.</p>
+      <p>A complete open-source Batman app working on top of Rails. <a href="http://batman-classifieds.heroku.com">Live example</a> and <a href="https://github.com/Shopify/batman-classifieds">source code</a>.</p>
     </li>
     <li class="feature-image"><a href="/alfred.html"><img src="images/alfred_small.jpg" width="268" height="161"></a></li>
     <li class="feature-description">
