Add SetSort and SetIntersection.
 - Each takes a left and a right Set in the constructor and guarantee an up to date representation of the operation on the two sets.
 - Each is Observable
 - Each subclasses Set and thus is Enumerable and has all the other Set goodness
 - Each plays nice with one another and the other Set operations like indices and sorts.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -60,8 +60,10 @@
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_index_test.coffee"></script>
+    <script type="text/coffeescript" src="set/set_intersection_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_sort_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_test.coffee"></script>
+    <script type="text/coffeescript" src="set/set_union_test.coffee"></script>
     <script type="text/coffeescript" src="set/unique_set_index_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/local_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/session_storage_test.coffee"></script>
