--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -26,7 +26,6 @@
     <script type="text/coffeescript" src="app_test.coffee"></script>
     <script type="text/coffeescript" src="controller_test.coffee"></script>
     <script type="text/coffeescript" src="data_test.coffee"></script>
-    <script type="text/coffeescript" src="dispatcher_test.coffee"></script>
     <script type="text/coffeescript" src="enumerable_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_emitter_test.coffee"></script>
     <script type="text/coffeescript" src="events/event_test.coffee"></script>
@@ -60,6 +59,11 @@
     <script type="text/coffeescript" src="property/keypath_test.coffee"></script>
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/dispatcher_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/route_map_builder_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/route_map_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/route_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/routing_system_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_index_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_intersection_test.coffee"></script>
     <script type="text/coffeescript" src="set/set_sort_test.coffee"></script>
