Add NamedRouteQuery for getting string paths from @resources based routes.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -60,6 +60,7 @@
     <script type="text/coffeescript" src="property/property_test.coffee"></script>
     <script type="text/coffeescript" src="request_test.coffee"></script>
     <script type="text/coffeescript" src="routes/dispatcher_test.coffee"></script>
+    <script type="text/coffeescript" src="routes/named_route_query_test.coffee"></script>
     <script type="text/coffeescript" src="routes/route_map_builder_test.coffee"></script>
     <script type="text/coffeescript" src="routes/route_map_test.coffee"></script>
     <script type="text/coffeescript" src="routes/route_test.coffee"></script>
