Add an $escapeHTML filter for taking user supplied strings and making them safe to insert into the DOM

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -75,6 +75,7 @@
     <script type="text/coffeescript" src="storage_adapter/session_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rails_storage_test.coffee"></script>
     <script type="text/coffeescript" src="storage_adapter/rest_storage_test.coffee"></script>
+    <script type="text/coffeescript" src="utilities/escape_html_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/function_name_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/get_test.coffee"></script>
     <script type="text/coffeescript" src="utilities/inflector_test.coffee"></script>
