Add the RenderCache for storing rendered views and evicting the given an absolute size limit on an LRU basis.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -95,6 +95,7 @@
     <script type="text/coffeescript" src="view/nested_loop_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/oneway_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/partial_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="view/render_cache_test.coffee"></script>
     <script type="text/coffeescript" src="view/route_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/select_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
