--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -102,6 +102,7 @@
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
+    <script type="text/coffeescript" src="view/view_subclass_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_instance_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/yield_and_contentfor_test.coffee"></script>
     <script type="text/coffeescript">QUnit.start()</script>
