--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -88,6 +88,7 @@
     <script type="text/coffeescript" src="utilities/_batman_test.coffee"></script>
     <script type="text/coffeescript" src="view/class_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/event_binding_test.coffee"></script>
+    <script type="text/coffeescript" src="view/dom_operations_test.coffee"></script>
     <script type="text/coffeescript" src="view/filter_execution_test.coffee"></script>
     <script type="text/coffeescript" src="view/filter_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/formfor_rendering_test.coffee"></script>
@@ -100,7 +101,6 @@
     <script type="text/coffeescript" src="view/select_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/simple_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/style_binding_test.coffee"></script>
-    <script type="text/coffeescript" src="view/unbinding_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_test.coffee"></script>
     <script type="text/coffeescript" src="view/view_instance_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/yield_and_contentfor_test.coffee"></script>
