Refactor filter argument binding to always ignore the contents of object literals and strings.
 - Fix #373.

--- a/tests/batman/test.html
+++ b/tests/batman/test.html
@@ -88,8 +88,8 @@
     <script type="text/coffeescript" src="utilities/_batman_test.coffee"></script>
     <script type="text/coffeescript" src="view/class_binding_test.coffee"></script>
     <script type="text/coffeescript" src="view/event_binding_test.coffee"></script>
-    <script type="text/coffeescript" src="view/filter_execution_test.coffee"></script>
-    <script type="text/coffeescript" src="view/filter_rendering_test.coffee"></script>
+    <script type="text/coffeescript" src="view/filter_parsing_test.coffee"></script>
+    <script type="text/coffeescript" src="view/filters_test.coffee"></script>
     <script type="text/coffeescript" src="view/formfor_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/loop_rendering_test.coffee"></script>
     <script type="text/coffeescript" src="view/nested_loop_rendering_test.coffee"></script>
